--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,26 @@
-version: "3.8"
-
 services:
-  db:
-    image: postgres:16.3
-    container_name: postgres-db
-    environment:
-      POSTGRES_DB: socialnetwork
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: adminpassword
-    volumes: 
-      - db-data:/var/lib/postgressql/data
-    ports:
-      - "5432:5432"
+    db:
+      image: postgres:16.3
+      container_name: postgres-db
+      environment:
+        POSTGRES_DB: socialnetwork
+        POSTGRES_USER: admin
+        POSTGRES_PASSWORD: adminpassword
+      volumes: 
+        - db-data:/var/lib/postgressql/data
+      ports:
+        - "5432:5432"
+    
+    redis:
+      image: redis:6.2-alpine
+      container_name: social-redis
+      restart: always
+      ports:
+        - "6379:6379"
+      volumes:
+        - redis_data:/data
+      command: ["redis-server", "--appendonly", "yes"]
 
 volumes:
   db-data:
+  redis_data:
